# DTI-VR-Demo

./: .gitignore  .gitmodules  CMakeGenerateHierarchy.txt  CMakeLists.txt
CMake/: FindGLEW.cmake  FindGLFW.cmake  FindGLI.cmake  FindGLM.cmake  FindOpenVR.cmake  FindTeem.cmake
lib/ecs/: CMakeLists.txt
lib/ecs/Components/: CMakeLists.txt
lib/ecs/Components/Materials/: CMakeLists.txt  Material.cpp  Material.hpp  Materials.hpp
lib/ecs/Components/Materials/SurfaceMaterials/: CMakeLists.txt
lib/ecs/Components/Materials/SurfaceMaterials/Normal/: CMakeLists.txt  Normal.cpp  Normal.hpp
lib/ecs/Components/Materials/SurfaceMaterials/TexCoord/: CMakeLists.txt  TexCoord.cpp  TexCoord.hpp
lib/ecs/Components/Materials/SurfaceMaterials/Texture/: CMakeLists.txt  Texture.cpp  Texture.hpp
lib/ecs/Components/Materials/SurfaceMaterials/UniformColor/: CMakeLists.txt  UniformColor.cpp  UniformColor.hpp
lib/ecs/Components/Materials/SurfaceMaterials/VertexColor/: CMakeLists.txt  VertexColor.cpp  VertexColor.hpp
lib/ecs/Components/Materials/VolumeMaterials/: CMakeLists.txt
lib/ecs/Components/Materials/VolumeMaterials/ProxyGeoVolume/: CMakeLists.txt  ProxyGeoVolume.cpp  ProxyGeoVolume.hpp
lib/ecs/Components/Math/: CMakeLists.txt  Perspective.hpp  Transform.hpp
lib/ecs/Components/Meshes/: CMakeLists.txt  Cube.hpp  Mesh.cpp  Mesh.hpp  Meshes.hpp  OBJMesh.cpp  OBJMesh.hpp  OBJMeshGroup.cpp  OBJMeshGroup.hpp  Plane.hpp  Sphere.hpp  ViewAlignedSlices.hpp
lib/ecs/Components/Textures/: CMakeLists.txt  RenderableTexture2D.hpp  Texture.hpp  Texture2D.hpp  Texture3D.hpp  TextureCube.hpp  Textures.hpp
lib/ecs/Entities/: CMakeLists.txt  Entity.hpp
lib/ecs/Entities/Cameras/: CMakeLists.txt  CameraBufferObject.hpp  OrbitCamera.hpp  PerspectiveCamera.hpp  SpinTableCamera.hpp
lib/ecs/Entities/Cameras/HTCVive/: CMakeLists.txt  HTCVive.cpp  HTCVive.hpp
lib/ecs/Entities/Lights/: CMakeLists.txt  Light.hpp  LightBufferObject.hpp  PointLight.hpp
lib/ecs/Entities/Model/: CMakeLists.txt  Model.hpp
lib/ecs/System/: CMakeLists.txt  Input.cpp  Input.hpp  Scene.cpp  Scene.hpp  SharedData.cpp  SharedData.hpp  System.cpp  System.hpp  Workers.cpp  Workers.hpp
lib/gldk/: CMakeLists.txt  gldk.cpp  gldk.hpp
lib/teem/lib/: TeemBuildSettings.cmake  TeemLibraryDepends.cmake  teem.lib
resources/: Instructions.xcf  dwi_fa.nrrd  dwi_fa_byte.nrrd  dwi_fa_byte_clean.nrrd  dwi_fa_clean.nrrd  dwi_fa_clean_64.nrrd
resources/Materials/SurfaceMaterials/Normal/: shader.frag  shader.vert
resources/Materials/SurfaceMaterials/TexCoord/: shader.vert
resources/Materials/SurfaceMaterials/Texture/: shader.frag  shader.vert
resources/Materials/SurfaceMaterials/UniformColor/: shader.frag  shader.vert
resources/Materials/SurfaceMaterials/VertexColor/: shader.vert
resources/Materials/VolumeMaterials/ProxyGeoVolume/: shader.frag  shader.vert
resources/Tractography_fa_high/: tractography.2267.mtl
resources/Vive/Controller/: vr_controller_vive_1_5.mtl
resources/streamlines/streamlines/: streams.489.mtl
sources/: CMakeLists.txt  DesktopMain.cpp  VRMain.cpp  main.cpp
sources/Options/: Options.cpp  Options.h
sources/Prefabs/: CMakeLists.txt
sources/Prefabs/Desktop/: CMakeLists.txt  DesktopGUI.hpp
sources/Prefabs/Shared/: CMakeLists.txt  TransferFunctionWidget.hpp  TransferFunctionWindow.hpp
sources/Prefabs/Shared/Volumes/: CMakeLists.txt  Volume.cpp  Volume.hpp
sources/Prefabs/Shared/Volumes/RaycastVolume/: CMakeLists.txt  RaycastVolume.cl  RaycastVolume.cpp  RaycastVolume.h  RaycastVolume.hpp
sources/Prefabs/Shared/Volumes/SlicedVolume/: CMakeLists.txt  SlicedVolume.cl  SlicedVolume.cpp  SlicedVolume.hpp
sources/Prefabs/VR/: CMakeLists.txt  ImguiVive.cpp  ImguiVive.hpp
